# SpaceTree

./: CHANGELOG.md  README.md  SpaceTree知乎介绍文章.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  file_manager.db-journal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_watcher.rs  lib.rs  scanner.rs
src/components/: AboutCenter.vue  AdvancedFilter.vue  AnalysisCenter.vue  AppLayout.vue  DirectoryTree.vue  DuplicateFileList.vue  DuplicateFileTable.vue  FilePreview.vue  ImageArchiveCenter.vue  ScanCenter.vue  SearchCenter.vue  SettingsCenter.vue  SmartCleanAssistant.vue  ToolsCenter.vue  UpdateCenter.vue  VirtualList.vue
src/composables/: useAdvancedRuleEngine.ts  useAtomicOperations.ts  useBatchOperations.ts  useCleanRules.ts  useFileDependencyAnalyzer.ts  useFileOperations.ts  useOperationHistory.ts  usePerformance.ts  useSearchCache.ts  useTheme.ts  useThrottle.ts  useUserBehaviorLearning.ts  useVirtualList.ts
src/stores/: index.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: errorHandler.ts  formatters.ts  i18n.ts  indexedDB.ts  logger.ts
