[package]
name = "duplicate-file-hunter"
version = "3.40.0"
description = "智能重复文件管理工具 - 3.0 版本"
authors = ["呆若木鸡"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
md5 = "0.7.0"
sha2 = "0.10.8"
walkdir = "2.5.0"
chrono = "0.4.38"
notify = "6.1.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Phase 1 性能优化依赖
rayon = "1.10"                    # 并行计算
r2d2 = "0.8"                      # 连接池
r2d2_sqlite = "0.24"              # SQLite连接池
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }  # 高速哈希
blake3 = "1.5"                    # 现代安全哈希算法
# 企业级扫描器依赖
crossbeam = "0.8"                 # 并发通道
memmap2 = "0.9"                   # 内存映射
num_cpus = "1.16"                 # CPU核心数检测
# Phase 3 图片处理依赖
image = "0.25"                    # 图像处理
img_hash = "3.2"                  # 感知哈希
# 错误处理
thiserror = "1.0"                 # 错误类型定义
anyhow = "1.0"                    # 便捷错误处理
# 其他工具
lazy_static = "1.4"               # 全局静态变量
parking_lot = "0.12"              # 高性能锁
regex = "1.10"                    # 正则表达式
rand = "0.8"                      # 随机数生成
dirs = "5.0"                      # 获取系统目录
base64 = "0.22"                   # Base64 编码
csv = "1.3"                       # CSV 处理
env_logger = "0.11"               # 日志初始化
zip = "2.2"                       # ZIP 压缩

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_LibraryLoader"] }
